--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
-<link href="assets/images/favicon.png" rel="icon" />
+<link href="assets/images/eleanor.ico" rel="icon" />
 <title>eleanor</title>
-<meta name="description" content="Your ThemeForest item Name and description">
-<meta name="author" content="harnishdesign.net">
+<meta name="description" content="eleanor Documentation">
+<meta name="author" content="adina.feinste.in">
 
 <!-- Stylesheet
 ============================== -->
@@ -52,12 +52,14 @@
 		<button id="sidebarCollapse" class="navbar-toggler d-block d-md-none" type="button"><span></span><span class="w-75"></span><span class="w-50"></span></button>
 
 		<!-- Logo -->
-        <a class="logo ml-md-3" href="index.html" title="eleanor Documentation"> <img src="assets/images/logo-light.png" alt="eleanor"/> </a>
+        <a class="logo ml-md-3" href="index.html" title="eleanor Documentation">
+          <img src="assets/images/eleanor.png" alt="eleanor"/> </a>
 		<span class="text-2 text-light ml-2">v2.0.5</span>
         <!-- Logo End -->
 
 		<!-- Navbar Toggler -->
-		<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#header-nav"><span></span><span></span><span></span></button>
+		<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
+    data-target="#header-nav"><span></span><span></span><span></span></button>
 
 		<div id="header-nav" class="collapse navbar-collapse justify-content-end">
           <!--<ul class="navbar-nav">
@@ -142,7 +144,7 @@
 			</div>
 			<div class="col-sm-6 col-lg-4">
 				<ul class="list-unstyled">
-					<li><strong class="font-weight-700">Created:</strong> 8 April, 2020</li>
+					<li><strong class="font-weight-700">Created:</strong> 18 March, 2019</li>
 					<li><strong>Update:</strong> 3 July, 2022</li>
 				</ul>
 			</div>
@@ -251,7 +253,9 @@
         <section id="idocs_demos">
           <h2>Demo Notebooks</h2>
           <p class="lead mb-5">Here are some Jupyter Notebook tutorials to
-            get you started with using eleanor!
+            get you started with using eleanor! Each notebook comes with a
+            table of contents. Click the link to see that section of code
+            in the notebook.
           </p>
         </section>
 
@@ -273,9 +277,6 @@
 		============================ -->
 		<section id="idocs_tips">
 		  <h3>Tips, Tricks, & Hacks</h3>
-      <p>In this notebook we'll explore how to make the most of these data and
-        ensure your signal is real.
-      </p>
       <iframe class="embed-responsive-item"
           src="tips_tricks.html"
           width="100%"
