--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                 python setup.py install</code>
               </li>
           </ol>
+          <!--
           <p class="lead">
             We recommend installing <code>eleanor</code> in an
             <a href="https://docs.conda.io/projects/conda/en/latest/user-guide/tasks/manage-environments.html" target="_blank">Anaconda environment</a>
@@ -217,6 +218,7 @@
             </li>
 
           </ol>
+        -->
         </section>
 
 		<hr class="divider">
@@ -2149,12 +2151,9 @@
         <li><span class="badge badge-danger">Fixed</span>
           Installing proper version of <code>TensorFlow</code> (since no longer on PyPI)
           </li>
-        <li><span class="badge badge-success">Added</span>
-          Documentation for creating <code>eleanor</code> in a conda environment
-          </li>
-        <li><span class="badge badge-success">Added</span>
-          Documentation for creating <code>eleanor</code> in a conda environment (Mac M1 users)
-          </li>
+          <li><span class="badge badge-info">Updated</span>
+            Running tests through GitHub Actions instead of Travis CI
+            </li>
         <li><span class="badge badge-info">Updated</span>
           Documentation page and favicon :3
           </li>
