gaia dr3 in changelog

--- a/index.html
+++ b/index.html
@@ -2148,8 +2148,8 @@
         <a target="_blank" href="https://dribbble.com/harnishdesign">@Dribbble</a></p> -->
       <h3 id="v2-0-5">Version 2.0.5 <small class="text-muted">(4 July, 2022)</small></h3>
       <ul class="changelog">
-        <li><span class="badge badge-danger">Fixed</span>
-          Installing proper version of <code>TensorFlow</code> (since no longer on PyPI)
+        <li><span class="badge badge-danger">Updated</span>
+          Now takes Gaia DR3 IDs (no longer supporting Gaia DR2)
           </li>
           <li><span class="badge badge-info">Updated</span>
             Running tests through GitHub Actions instead of Travis CI
